--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
             {
               attachments: [{
                 color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
-                text: `${process.env.AS_WORKFLOW}\n${process.env.AS_JOB} (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}@${process.env.AS_REF} by ${process.env.AS_AUTHOR} ${{ job.status }} in ${process.env.AS_TOOK}`,
+                text: `${process.env.AS_JOB} 시작 (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}`,
               }]
             }
         env:
@@ -45,9 +45,17 @@ jobs:
         run: echo Hello, world!
 
       - uses: 8398a7/action-slack@v3
+
         with:
-          status: ${{ job.status }}
-          fields: repo,commit,message,author,took # default: repo,commit
+          status: 'custom'
+          fields: workflow,job,commit,repo,ref,author,took
+          custom_payload: |
+            {
+              attachments: [{
+                color: '${{ job.status }}' === 'success' ? 'good' : '${{ job.status }}' === 'failure' ? 'danger' : 'warning',
+                text: `${process.env.AS_JOB} 완료 (${process.env.AS_COMMIT}) of ${process.env.AS_REPO}\n took: ${took}`,
+              }]
+            }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
         if: always() # Pick up events even if the job fails or is canceled.
