--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       - uses: 8398a7/action-slack@v3
         with:
           status: 'custom'
-          fields: workflow,job,commit,repo,ref,author,took
+          fields: workflow,job,commit,repo,ref,author,took,message
           custom_payload: |
             {
               attachments: [{
